--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/navi_messages"
         android:icon="@drawable/baseline_sms_24"
-        android:title="Messeges" />
+        android:title="Messages" />
     <item
         android:id="@+id/navi_calendar"
         android:icon="@drawable/baseline_calendar_month_24"
