--- a/app/src/main/res/layout/fragment_security.xml
+++ b/app/src/main/res/layout/fragment_security.xml
@@ -3,12 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MessagesFragment">
+    tools:context=".SecurityFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/lv_security">
+
+    </ListView>
+
+
 
 </FrameLayout>
