all lv is setup

--- a/app/src/main/res/layout/fragment_fire.xml
+++ b/app/src/main/res/layout/fragment_fire.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapFragment">
+    tools:context=".FireFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
+        android:id="@+id/lv_fire"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/fire_fragment" />
+        android:layout_height="match_parent">
+    </ListView>
 
 </FrameLayout>
