--- a/app/src/main/res/layout/fragment_security.xml
+++ b/app/src/main/res/layout/fragment_security.xml
@@ -9,7 +9,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lv_security">
+        android:id="@+id/lv_security"
+        android:clickable="true"
+        android:focusable="true">
 
     </ListView>
 
