--- a/app/src/main/res/layout/item_announcement.xml
+++ b/app/src/main/res/layout/item_announcement.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <!-- item_announcement.xml -->
@@ -9,6 +11,7 @@
         android:id="@+id/text_announcement"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:padding="8dp"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/white" />
 
