--- a/app/src/main/res/layout/item_announcement.xml
+++ b/app/src/main/res/layout/item_announcement.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- announcement_item.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <!-- item_announcement.xml -->
+    <!-- TextView for "from" field -->
     <TextView
-        android:id="@+id/text_announcement"
+        android:id="@+id/text_from"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
+
+    <!-- TextView for "message" field -->
+    <TextView
+        android:id="@+id/text_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="8dp"
         android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/white" />
