--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -91,30 +91,34 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Member Type text view -->
+    <TextView
+        android:id="@+id/tv_memberType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Member Type:"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_below="@id/layoutUserID"
+        android:layout_marginTop="16dp"
+        tools:ignore="HardcodedText" />
+
     <!-- Member Type dropdown -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layoutMemberType"
+    <Spinner
+        android:id="@+id/spinner_memberType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layoutUserID"
-        android:layout_marginTop="16dp">
-
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/dd_memberType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/member_type"
-            android:padding="12dp"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_below="@id/tv_memberType"
+        android:layout_marginTop="8dp"
+        android:textColorHint="#546E7A"
+        android:minHeight="48dp" />
 
     <!-- Admin checkbox -->
     <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/cb_admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layoutMemberType"
-        android:text="@string/admin" />
+        android:layout_below="@id/spinner_memberType"
+        android:text="Admin" />
 
     <Button
         android:id="@+id/btn_signup"
@@ -122,6 +126,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/cb_admin"
         android:layout_marginTop="16dp"
-        android:text="@string/sign_up" />
+        android:text="Sign Up" />
 
 </RelativeLayout>
