--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:popupTheme="@style/Base.Theme.AppChachi"
         app:title="@string/app_name"
         app:menu="@menu/main_menu"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <FrameLayout
         android:id="@+id/frame_layout_navigation"
