--- a/app/src/main/res/layout/custom_layout_members.xml
+++ b/app/src/main/res/layout/custom_layout_members.xml
@@ -13,6 +13,7 @@
         android:layout_width="164dp"
         android:layout_height="53dp"
         android:text="Member Name"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.384"
@@ -25,6 +26,7 @@
         android:layout_width="144dp"
         android:layout_height="53dp"
         android:text="@string/phone_number"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
