--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,21 +8,21 @@
         android:title="Menu"
         app:showAsAction="always"
         android:icon="@drawable/baseline_menu_24"
-        android:titleTextColor="#FFFFFF"
+        android:titleTextColor="@color/black"
         tools:ignore="AlwaysShowAction,HardcodedText">
 
         <menu>
             <item
                 android:id="@+id/action_announcement"
                 android:title="Announcements"
-                android:titleTextColor="#FFFFFF"
+                android:titleTextColor="@color/black"
                 tools:ignore="HardcodedText" />
 
             <item
                 android:id="@+id/action_logout"
                 android:title="Logout"
                 app:showAsAction="always"
-                android:titleTextColor="#FFFFFF"
+                android:titleTextColor="@color/black"
                 tools:ignore="AlwaysShowAction,HardcodedText" />
         </menu>
     </item>
