--- a/app/src/main/res/layout/activity_announcement.xml
+++ b/app/src/main/res/layout/activity_announcement.xml
@@ -19,8 +19,10 @@
         android:id="@+id/btn_create_announcement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_announcement"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="@string/create_announcement"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/black"/>
 
 </LinearLayout>
