--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
             tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -34,6 +36,8 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
             tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -45,7 +49,10 @@
         android:layout_below="@id/layoutPassword"
         android:layout_marginTop="1dp"
         android:text="Remember Me"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:buttonTintMode="@color/black"/>
 
     <Button
         android:id="@+id/btn_forgot_password"
@@ -56,7 +63,9 @@
         android:layout_marginTop="1dp"
         android:layout_marginLeft="80dp"
         android:text="Forgot Password?"
-        tools:ignore="HardcodedText" />
+        android:textColor="@color/white"
+        tools:ignore="HardcodedText"
+        android:backgroundTint="@color/black"/>
 
     <Button
         android:id="@+id/btn_login"
@@ -65,6 +74,8 @@
         android:layout_below="@id/layoutPassword"
         android:layout_marginTop="70dp"
         android:text="Log In"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/black"
         tools:ignore="HardcodedText,VisualLintButtonSize" />
 
     <Button
@@ -75,6 +86,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
         android:text="Didn't sign up yet? Click here"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:backgroundTint="@color/black"/>
 
 </RelativeLayout>
