--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/Base.Theme.AppChachi"
+        app:titleTextColor="@color/white"
         app:title="@string/app_name"
         app:menu="@menu/main_menu"
+        android:backgroundTint="@color/black"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -37,6 +38,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:menu="@menu/bottom_navigation_menu" />
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@android:color/white"
+        app:menu="@menu/bottom_navigation_menu"
+        android:background="@android:color/black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
