--- a/app/src/main/res/layout/activity_announcement_form.xml
+++ b/app/src/main/res/layout/activity_announcement_form.xml
@@ -44,7 +44,11 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:minHeight="48dp"
-      />
+      android:spinnerMode="dropdown"
+      android:popupBackground="@color/black"
+      android:dropDownVerticalOffset="48dp"
+      android:dropDownWidth="match_parent"
+      android:textColor="@color/black" />
 
   <Button
       android:id="@+id/btn_send"
