--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,9 @@
         <item name="android:windowBackground">@android:color/white</item>
     </style>
 
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner.DropDown">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+
 </resources>
